Connect track service with audio service. Track service need to refactor